# Cheapskate-Agent-Memory

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-review-1.md  agent-review-2.md  agent-review-3.md  agent-review-4.md  agent-review-5.md  agent-review-6.md  init-design.md
integration/: AGENTS.md  skill-template.md
integration/CLAUDE-code/: CLAUDE.md
integration/hermes/: SKILL.md
integration/opencode/: SKILL.md
src/cheapskate/: __init__.py  __main__.py  cli.py  client.py  config.py  db.py  hooks.py  hrr.py  mcp.py  memory_md.py
src/cheapskate/commands/: __init__.py  add.py  audit.py  consolidate.py  init.py  list.py  prune.py  search.py  stats.py  status.py  suggest.py  topicify.py  topics.py  verify.py
src/cheapskate_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_agent_integration.py  test_cli.py  test_config.py  test_db.py  test_hrr.py  test_memory_md.py
