[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cheapskate-memory"
version = "0.1.0"
description = "Zero-cost, zero-dependency, fully-local memory system for coding agents"
authors = [{name = "canh0chua", email = "canh0chua@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pyyaml>=5.4.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["memory", "agent", "sqlite", "fts5", "hrr", "local"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.scripts]
memory = "cheapskate.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]